Initial application generated by JHipster-5.7.0

--- a/angular.json
+++ b/angular.json
@@ -12,7 +12,7 @@
   },
   "defaultProject": "iquitos-app",
   "cli": {
-    "packageManager": "yarn"
+    "packageManager": "npm"
   },
   "schematics": {
     "@schematics/angular:component": {
