--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.2.0",
     "rxjs-tslint": "^0.1.4",
+    "saturn-datepicker": "^7.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
